# wot-td

./: .gitlab-ci.yml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: deploy.yml  wot-rust-ubuntu.yml  wot-td-ubuntu.yml  wot-td.yml
.reuse/: dep5
LICENSES/: MIT.txt
assets/: node-wot-counter.td
examples/: read.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
src/: buildable.rs  builder.rs  context.rs  extend.rs  hlist.rs  lib.rs  protocol.rs  seedable.rs  serde_helpers.rs  thing.rs  traits.rs
src/builder/: affordance.rs  data_schema.rs  human_readable_info.rs
src/protocol/: coap.rs  http.rs  mqtt.rs
wot-td/: Cargo.toml
wot-td-derive/: Cargo.toml
wot-td-derive/src/: extendable_piece.rs  lib.rs
wot-td/src/: extend.rs  lib.rs  thing.rs
wot-td/src/builder/: affordance.rs  data_schema.rs  human_readable_info.rs
wot-td/src/protocol/: coap.rs  http.rs  mqtt.rs
