[package]
name = "wot-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
serde_with = "1.13.0"
time = { version = "0.3.9", features = ["serde", "serde-well-known"] }

[dev-dependencies]
time = { version = "0.3.9", features = ["macros"] }
