[package]
name = "wot-td"
version = "0.1.0"
edition = "2021"
description = "Web of Things (WoT) Thing Description manipulation"
license = "MIT"
repository = "https://github.com/sifis-home/wot-rust"
keywords = ["wot", "thing description"]

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
serde_with = "1.13.0"
time = { version = "0.3.9", features = ["serde", "serde-well-known"] }

[dev-dependencies]
time = { version = "0.3.9", features = ["macros"] }
