[package]
name = "wot-td"
version = "0.3.1"
edition = "2021"
description = "Web of Things (WoT) Thing Description manipulation"
license = "MIT"
repository = "https://github.com/wot-rust/wot-td"
keywords = ["wot", "WebofThings"]

[dependencies]
oxilangtag = { version = "0.1.3", features = ["serde"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
serde_repr = "0.1.9"
serde_with = "3.4.0"
thiserror = "1.0.31"
time = { version = "0.3.11", features = ["serde", "serde-well-known"] }

[dev-dependencies]
time = { version = "0.3.9", features = ["macros"] }
